--- a/Site.html
+++ b/Site.html
@@ -30,7 +30,8 @@
 
      <p>
         <h1> Here Its Table Assigment</h1>
-    <a href="Table ASsiggnment.html">Table Assigment Click To Check</a>
+    <a href="Table ASsiggnment.html">Assigment</a>
+    
     </p>
 
  <h2>And This Below Site with All tags We Studied</h2>
